--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Yellowtail&display=swap");
+@import "reset.css";
+@import "status-bar.css";
 body {
   background-color: cornflowerblue;
-  font-family: ;
+  font-family: "Yellowtail", cursive;
 }
-.status-bar {
+.welcome-header {
+  margin: 150px 0px;
+  text-align: center;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
-.status-bar__column:first-child span {
-  margin-right: 5px;
+.welcome-header__title {
+  margin-bottom: 50px;
+  font-size: 30px;
+  font-weight: 500;
+}
+.welcome-header__text {
+  width: 50%;
+  opacity: 0.8;
 }
