--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Yellowtail&display=swap");
-@import "reset.css";
+@import "useful things/reset.css";
+@import "useful things/variable.css";
 @import "kakao-2/status-bar.css";
-@import "variable.css";
 @import "kakao-2/welcome.css";
+@import "programmer.png";
+@import "kakao-3/nav-bar.css";
 
 body {
   background-color: cornflowerblue;
   font-family: "Yellowtail", cursive;
 }
+
