--- a/css/kakao-2/status-bar.css
+++ b/css/kakao-2/status-bar.css
@@ -7,7 +7,8 @@
   margin-right: 5px;
 }
 .status-bar__column {
-  width: 33%;
+  position: fixed;
+  width: 100%;
 }
 .status-bar__column:nth-child(2) {
   display: flex;
