--- a/css/kakao-2/welcome.css
+++ b/css/kakao-2/welcome.css
@@ -1,5 +1,5 @@
 .welcome-header {
-  margin: 100px 0px;
+  margin: 80px 0px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -9,6 +9,7 @@
   margin-bottom: 50px;
   font-size: 40px;
   font-weight: 500;
+  font-weight: 600;
 }
 .welcome-header__text {
   width: 50%;
@@ -47,4 +48,9 @@
   text-decoration: none;
   color: inherit;
   font-size: 14px;
+}
+.welcome-header__title::first-letter {
+  font-size: 100px;
+}
+.welcome-header__title::first-line {
 }
