--- a/css/kakao-3/friends.css
+++ b/css/kakao-3/friends.css
@@ -10,3 +10,24 @@
   opacity: 0.6;
   margin-left: 12px;
 }
+
+.friends-screen {
+  padding: 0px var(--friend-padding);
+}
+.friends-screen__channel-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.friends-screen__channel {
+  margin-top: 20px;
+  border-top: 1px solid rgba(0, 0, 0, 0.4);
+}
+.friends-screen__channel-header {
+  padding-top: 9px;
+  padding-bottom: 8px;
+  color: rgba(0, 0, 0, 0.7);
+}
+.user-component__2 {
+  color: rgba(0, 0, 0, 0.7);
+}
