--- a/css/kakao-3/nav-bar.css
+++ b/css/kakao-3/nav-bar.css
@@ -15,8 +15,8 @@
 .fa-ellipsis-h {
   padding-right: 46px;
 }
-.fa-user-astronaut {
-  padding-left: 46px;
+.nav__modifier {
+  padding-left: 52px;
 }
 .nav__link {
   color: #2f363e;;
