--- a/css/style2.css
+++ b/css/style2.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Yellowtail&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Satisfy&family=Yellowtail&display=swap");
 @import "useful/reset.css";
 @import "useful/variable.css";
 @import "kakao-2/status-bar.css";
@@ -7,7 +7,12 @@
 @import "kakao-3/nav-bar.css";
 @import "kakao-3/screen-header.css";
 @import "kakao-3/friends.css";
-@import "useful/user-component.css";
+@import "kakao-4/tokyo.css";
+@import "kakao-4/badge.css";
+@import "kakao-5/watcha.css";
+@import "kakao-5/find-icon.css";
+@import "kakao-5/find-header.css";
+@import "kakao-5/open.css";
 
 body {
   background-color: cornflowerblue;
