--- a/css/kakao-4/tokyo.css
+++ b/css/kakao-4/tokyo.css
@@ -1,19 +1,17 @@
-.user-component,
 .user-component__column {
   display: flex;
   align-items: center;
-  margin-top: 25px;
+  margin-top: 60px;
+  border-bottom: 1px solid rgba(78, 89, 104, 0.4);
+}
+.hh {
+  justify-content: space-between;
 }
 .user-component__column:last-child {
   justify-content: space-between;
 }
 
-.user-component__column:nth-child(3) {
-  margin-bottom: 15px;
-  padding-bottom: 35px;
-  justify-content: space-between;
-}
-.gg {
+.user-component__column:nth-child(2) {
   justify-content: space-between;
 }
 .user-component__side {
@@ -24,11 +22,6 @@
   width: 90px;
   height: 90px;
   border-radius: 40px;
-}
-.user-component__avatar-sm {
-  width: 80px;
-  height: 80px;
-  border-radius: 35px;
   object-fit: cover;
 }
 
@@ -39,6 +32,7 @@
   font-size: 25px;
 }
 .user-component__subtitle {
+  font-family: "Yellowtail", cursive;
   margin-top: 9px;
-  opacity: 0.5;
+  opacity: 0.7;
 }
