--- a/css/useful/variable.css
+++ b/css/useful/variable.css
@@ -1,6 +1,7 @@
 :root {
   --friend: #12567b;
   --friend-padding: 20px;
+  --main-border: 1px solid rgba(0, 0, 0, 0.4);
 }
 input:focus {
   outline: none;
