--- a/css/style2.css
+++ b/css/style2.css
@@ -13,6 +13,7 @@
 @import "kakao-5/find-icon.css";
 @import "kakao-5/find-header.css";
 @import "kakao-5/open.css";
+@import "kakao-6/component.css";
 
 body {
   background-color: cornflowerblue;
