--- a/css/kakao-3/nav-bar.css
+++ b/css/kakao-3/nav-bar.css
@@ -22,6 +22,15 @@
   color: #2f363e;;
   position: relative;
 }
+@keyframes navanimation {
+  0% { transform: none;
+
+  }50% {transform: translateY(-5px) rotateY(360deg);
+
+  }100% {transform: none;
+
+  }
+}
 .nav__notification {
   background-color: yellowgreen;
   display: flex;
@@ -33,9 +42,7 @@
   position: absolute;
   left: 22px;
   bottom: 17px;
-  <!--.nav__notification에 flex를 적용시킨 이유는 그의 자손인 1을 가운데에 위치하기 위해 flex는 부모한테 적용시킨다.-->
-  <!--말풍선이랑 1이 겹쳐지는 이유는 말풍선과 1의 기본 위치가 .nav__link를 기준으로 같기에 1에 absolute를 적용시켜 위에 위치하게 됨-->
-  
+  animation: navanimation 2s ease-in-out infinite;
 }
 .nav__circle {
   color: tomato;
@@ -48,4 +55,23 @@
   border-radius: 2.5px;
   position: absolute;
   left: 29px;
+}
+@keyframes appearanimation {
+  from { opacity: 0; transform: translateY(50px);
+
+  }to {opacity: 1;
+
+  }
+}
+.nav__page {
+  animation: appearanimation 1s ease-in-out forwards;
+}
+.fa-comments {
+
+}
+.fa-search-dollar {
+
+}
+.fa-ellipsis-h {
+
 }
